RESOLVED FIXED305762
`imported/w3c/web-platform-tests/web-locks/workers.https.html` is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=305762
Summary `imported/w3c/web-platform-tests/web-locks/workers.https.html` is a flaky crash
Vitaly Dyackhov
Reported 2026-01-19 02:32:27 PST
History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fweb-locks%2Fworkers.https.html Stack trace: ``` Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00007f5359daf930 in JSC::JSPromise::performPromiseThen(JSC::VM&, JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 [Current thread is 1 (Thread 0x7f5066ffd6c0 (LWP 1131064))] Thread 1 (Thread 0x7f5066ffd6c0 (LWP 1131064)): #0 0x00007f5359daf930 in JSC::JSPromise::performPromiseThen(JSC::VM&, JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #1 0x00007f535bc8af55 in WebCore::DOMPromise::whenPromiseIsSettled(WebCore::JSDOMGlobalObject*, JSC::JSPromise*, WTF::Function<void (WebCore::JSDOMGlobalObject*, bool, JSC::JSValue)>&&) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #2 0x00007f535ba124d4 in auto WebCore::WebLockManager::didCompleteLockRequest(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::WebLockIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long> >, bool)::{lambda(auto:1&)#1}::operator()<WebCore::WebLockManager>(WebCore::WebLockManager&) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #3 0x00007f535c1aceef in WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #4 0x00007f535d743d64 in WebCore::WorkerDedicatedRunLoop::Task::performTask(WebCore::WorkerOrWorkletGlobalScope*) [clone .part.0] () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #5 0x00007f535d74e89f in WebCore::WorkerDedicatedRunLoop::runInMode(WebCore::WorkerOrWorkletGlobalScope*, WebCore::ModePredicate const&) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #6 0x00007f535d750305 in WebCore::WorkerDedicatedRunLoop::run(WebCore::WorkerOrWorkletGlobalScope*) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #7 0x00007f535d750a50 in WebCore::WorkerOrWorkletThread::runEventLoop() () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #8 0x00007f535d753531 in WebCore::WorkerOrWorkletThread::workerOrWorkletThread() () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #9 0x00007f535a6aca7d in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #10 0x00007f535a72cfad in WTF::wtfThreadEntryPoint(void*) () at /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #11 0x00007f5355e8aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #12 0x00007f5355f17c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78 ```
Attachments
Vitaly Dyackhov
Comment 1 2026-01-19 03:10:41 PST
EWS
Comment 2 2026-01-26 01:02:24 PST
Committed 306190@main (65057afee9f4): <https://commits.webkit.org/306190@main> Reviewed commits have been landed. Closing PR #56822 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-26 01:03:12 PST
Note You need to log in before you can comment on or make changes to this bug.